cleanup font-awsome

--- a/packages/core/src/scss/_component.scss
+++ b/packages/core/src/scss/_component.scss
@@ -4,7 +4,7 @@
 
 // Font Awesome icon set
 // http://fortawesome.github.io/Font-Awesome/
-@import "font-awesome/scss/font-awesome";
+//@import "font-awesome/scss/font-awesome";
 
 // UQ Icon set
 @import "../fonts/uq-icons/scss/uq-icons";
