--- a/packages/core/src/scss/_global.scss
+++ b/packages/core/src/scss/_global.scss
@@ -15,7 +15,7 @@ $font-body: $roboto;
 $font-monospace: $courier;
 
 // Font Awesome settings
-@forward "font-awesome/scss/variables";
+//@forward "font-awesome/scss/variables";
 $fa-font-size-base: $font-size-m;
 $fa-css-prefix: icon;
 
