--- a/packages/alert/src/scss/_global.scss
+++ b/packages/alert/src/scss/_global.scss
@@ -8,7 +8,7 @@ $alert-danger-bg-color: core.$danger-color !default; //#F4ACAC!default;
 
 $alert-font-size-sm: .875rem !default;
 $alert-font-size-md: 1rem !default;
-$alert-font-size-lg: 1rem !default;
+//$alert-font-size-lg: 1rem !default; core cleanup
 
 $alert-font-weight: 300 !default;
 $alert-text-color: core.$uq-neutral-dark80 !default; //222 !default;
