--- a/packages/form/src/scss/_global.scss
+++ b/packages/form/src/scss/_global.scss
@@ -22,11 +22,13 @@
   // Checkbox/Radio buttons
   $form-checkbox-border-radius: 4px;
   $form-checkbox-border-width: 1px;
+/* core cleanup
   $form-checkbox-button-bg-active: core.$brand-primary;
   $form-checkbox-button-bg: core.$uq-white;
   $form-checkbox-button-border: core.$grey-05;
   $form-checkbox-button-text-active: core.$uq-white;
   $form-checkbox-button-text: core.$brand-text;
+*/
   $form-checkbox-check-color: core.$uq-white;
   $form-checkbox-size: 24px;
   $form-checkbox-check-size: $form-checkbox-size;
