--- a/packages/grid-menu/src/scss/_global.scss
+++ b/packages/grid-menu/src/scss/_global.scss
@@ -4,7 +4,7 @@
 $linked-list-color: core.$link-color;
 $linked-list-color-hover: core.$uq-white;
 $linked-list-desc: core.$uq-neutral-dark80; //222;
-$linked-list-desc-hover: core.$uq-white;
+//$linked-list-desc-hover: core.$uq-white; core cleanup
 $linked-list-border: core.$uq-neutral-light40; //EEE;
 
 // Two column layout.
