--- a/packages/icon/src/scss/_component.scss
+++ b/packages/icon/src/scss/_component.scss
@@ -1,8 +1,8 @@
 @use 'global' as *;
 
 .uq-icon {
-  width: 1.5em;
-  height: 1.5em;
+  width: 1.5rem;
+  height: 1.5rem;
   stroke: currentColor;
   fill: currentColor;
   vertical-align: text-top;
