--- a/packages/core/src/scss/_component.scss
+++ b/packages/core/src/scss/_component.scss
@@ -7,7 +7,7 @@
 //@import "font-awesome/scss/font-awesome";
 
 // UQ Icon set
-@import "../fonts/uq-icons/scss/uq-icons";
+//@import "../fonts/uq-icons/scss/uq-icons"; core cleanup
 
 //
 // Icons
@@ -80,6 +80,7 @@
 
 // Background patterns and textures for use on sections to create visual difference.
 
+/* core cleanup
 $uq-bg-image-path: "../images" !default;
 
 .pattern {
@@ -112,3 +113,4 @@ $uq-bg-image-path: "../images" !default;
     background: #e2e2e2 url("#{$uq-bg-image-path}/pattern-light-grid.png") repeat 50% 50%;
   }
 }
+*/
