--- a/packages/core/src/scss/_global.scss
+++ b/packages/core/src/scss/_global.scss
@@ -15,12 +15,12 @@ $font-body: $roboto;
 $font-monospace: $courier;
 
 // Font Awesome settings
-//@forward "font-awesome/scss/variables";
+//@forward "font-awesome/scss/variables"; core cleanup
 $fa-font-size-base: $font-size-m;
 $fa-css-prefix: icon;
 
 // UQ icons settings
-@forward "../fonts/uq-icons/scss/variables";
+//@forward "../fonts/uq-icons/scss/variables"; core cleanup
 $uq-font-size-base: $font-size-m;
 $uq-css-prefix: icon;
 
