grid-menu kitchen sink updated

--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -723,13 +723,13 @@
     </ul>
     <br/>
     <h2>Grid menus with equalised height</h2>
-    <ul class="uq-grid-menu">
-      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Refresh to see me equalise!</span></a></li>
-      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 2</span></a></li>
-      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi interdum eros vitae dignissim luctus. Phasellus et ligula est.</span></a></li>
-      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 4</span></a></li>
-      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 5</span></a></li>
-      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 6</span></a></li>
+    <ul class="uq-grid-menu uq-grid-menu--equalised">
+      <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Refresh to see me equalise!</span></a></li>
+      <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Menu link 2</span></a></li>
+      <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi interdum eros vitae dignissim luctus. Phasellus et ligula est.</span></a></li>
+      <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Menu link 4</span></a></li>
+      <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Menu link 5</span></a></li>
+      <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Menu link 6</span></a></li>
     </ul>
   </div>
 </div>
