--- a/packages/storybook-html/src/components/core/_colour.scss
+++ b/packages/storybook-html/src/components/core/_colour.scss
@@ -149,13 +149,13 @@
 
   /* Links */
   .uqds-link-color{
-    background-color: $link-color;
+    background-color: $link;
   }
   .uqds-link-active-color{
-    background-color: $link-active-color;
+    background-color: $link-active;
   }
   .uqds-link-hover-color{
-    background-color: $link-hover-color;
+    background-color: $link-hover;
   }
 
   /* Text */
