--- a/packages/app-maps/src/scss/_component.scss
+++ b/packages/app-maps/src/scss/_component.scss
@@ -33,7 +33,7 @@ $-result-icon-spacing: $-icon-spacing;
 
   &__primary-text {
     color: core.$text;
-    font-family: core.$font-family;
+    font-family: core.$font-body;
     font-size: core.$font-size-s;
     font-weight: core.$font-weight-normal;
     line-height: core.$line-height;
@@ -84,7 +84,7 @@ $-result-icon-spacing: $-icon-spacing;
     }
 
     &:focus {
-      box-shadow: 0 0 0 2px core.$blue;
+      box-shadow: 0 0 0 2px core.$link;
       outline: 0 none;
     }
   }
@@ -284,7 +284,7 @@ $-result-icon-spacing: $-icon-spacing;
       }
 
       &:focus {
-        box-shadow: 0 0 0 2px core.$blue;
+        box-shadow: 0 0 0 2px core.$link;
         outline: 0 none;
       }
 
@@ -368,8 +368,8 @@ $-result-icon-spacing: $-icon-spacing;
         }
 
         &:focus {
-          border-color: core.$blue;
-          box-shadow: 0 0 0 1px core.$blue;
+          border-color: core.$link;
+          box-shadow: 0 0 0 1px core.$link;
           outline: none;
         }
       }
@@ -484,7 +484,7 @@ $-result-icon-spacing: $-icon-spacing;
 
           &:focus {
             outline: 0 none;
-            box-shadow: 2px 0 0 0 core.$blue inset;
+            box-shadow: 2px 0 0 0 core.$link inset;
           }
         }
 
@@ -564,7 +564,7 @@ $-result-icon-spacing: $-icon-spacing;
 
           &:focus-within {
             &::after {
-              background-image: url(get-icon('ui--chevron-right', core.$blue));
+              background-image: url(get-icon('ui--chevron-right', core.$link));
             }
           }
 
