--- a/packages/button/src/scss/_global.scss
+++ b/packages/button/src/scss/_global.scss
@@ -6,10 +6,10 @@ $button-font: $roboto !default;
 
 $button-color: $uq-white !default;
 $button-hover-color: $uq-white !default;
-$button-bg-color: $link-color !default;
-$button-bg-hover-color: $link-active-color !default;
-$button-border-color: $link-color !default;
-$button-border-hover-color: $link-active-color !default;
+$button-bg-color: $link !default;
+$button-bg-hover-color: $link-active !default;
+$button-border-color: $link !default;
+$button-border-hover-color: $link-active !default;
 
 $button-secondary-color: $uq-neutral-dark80 !default; //2b2b2b;
 $button-secondary-hover-color: $uq-black !default;
