--- a/packages/core/src/scss/_component.scss
+++ b/packages/core/src/scss/_component.scss
@@ -1,57 +1,7 @@
 // Main component stylesheet
 @use 'global' as *;
-@use 'print';
 
-// Font Awesome icon set
-// http://fortawesome.github.io/Font-Awesome/
-//@import "font-awesome/scss/font-awesome";
-
-// UQ Icon set
-//@import "../fonts/uq-icons/scss/uq-icons"; core cleanup
-
-//
-// Icons
-// Custom and contrib icon sets
-//
-
-// Create icon font stack to allow multiple sets to use the same prefix class
-// Remove if prefix classes are different.
-// Fallback to Roboto for when the icon class is applied directly to an element containing other text.
-.#{$fa-css-prefix},
-.#{$uq-css-prefix} {
-  font-family: uq-icons, FontAwesome, $roboto !important; // shortening font declaration
-  font-style: normal;
-  font-weight: inherit;
-}
-
-// Allow icons to be applied on buttons etc and not touch the text inside that element.
-.icon {
-  &:hover {
-    text-decoration: none;
-  }
-
-  &--prefix {
-    &::before {
-      margin-right: $space-sm; //.7rem
-    }
-  }
-
-  &--suffix {
-    &::before {
-      float: right;
-      margin-left: $space-sm; //.7rem
-      margin-top: $space-xs; //.15rem;
-    }
-  }
-
-  // Allow the icon to be a different colour to parent.
-  &--light-grey,
-  &--light-gray {
-    &::before {
-      color: $icon-light-grey-color;
-    }
-  }
-}
+// Tints
 
 .light-tint {
   @extend %light-tint;
@@ -61,6 +11,8 @@
   @extend %dark-tint;
 }
 
+// Light palette
+
 .light-palette {
   @extend %light-palette;
 }
@@ -69,7 +21,7 @@
   @extend %light-palette-bg;
 }
 
-// Dark
+// Dark palette
 .dark-palette {
   @extend %dark-palette;
 }
@@ -77,40 +29,3 @@
 .dark-palette-bg {
   @extend %dark-palette-bg;
 }
-
-// Background patterns and textures for use on sections to create visual difference.
-
-/* core cleanup
-$uq-bg-image-path: "../images" !default;
-
-.pattern {
-  &--noise {
-    background-image: url("#{$uq-bg-image-path}/pattern-noise.png");
-    background-repeat: repeat;
-  }
-
-  &--black-pinstripe {
-    background: #161616 url("#{$uq-bg-image-path}/pattern-black-pinstripe.gif") repeat 0 0;
-  }
-
-  &--cardboard {
-    background: #f6f6f6 url("#{$uq-bg-image-path}/pattern-cardboard.jpg") repeat 0 0;
-  }
-
-  &--mesh {
-    background: #fafafa url("#{$uq-bg-image-path}/pattern-mesh.gif") repeat 0 0;
-  }
-
-  &--dark-grid {
-    background: #1d1d1d url("#{$uq-bg-image-path}/pattern-dark-grid.png") repeat 50% 50%;
-  }
-
-  &--thatched {
-    background: #f8f8f8 url("#{$uq-bg-image-path}/pattern-thatched.png") repeat 0 0;
-  }
-
-  &--light-grid {
-    background: #e2e2e2 url("#{$uq-bg-image-path}/pattern-light-grid.png") repeat 50% 50%;
-  }
-}
-*/
