--- a/packages/lists/src/scss/_global.scss
+++ b/packages/lists/src/scss/_global.scss
@@ -1,4 +1,5 @@
 @use '@uqds/core/src/scss/global' as core;
 
-$h3-font-size: core.$font-size-xxl; //1.438rem core cleanup
-$pane-shaded-bg: core.$uq-neutral-light20; //f5f5f5;
+$h3-font-size: core.$font-size-xxl;
+$pane-shaded-bg: core.$uq-neutral-light20;
+$border-color: core.$uq-neutral-light40;
