--- a/packages/previous-next/src/scss/_component.scss
+++ b/packages/previous-next/src/scss/_component.scss
@@ -26,14 +26,14 @@
 	}
 
 	a {
-		color: core.$link-color;
+		color: core.$link;
 		font-size: 1.7rem;
 		font-weight: 400;
 		line-height: 1.2;
 		text-decoration: none;
 
 		&:hover {
-			color: core.$link-hover-color;
+			color: core.$link-hover;
 			text-decoration: none;
 
 			&:before {
