--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -1,7 +1,5 @@
 // Required base styles
-@use 'core/src/scss/component' as core with (
-  $uq-font-path: "../fonts"
-);
+@use 'core/src/scss/component' as core;
 @use 'grid/src/scss/component' as grid;
 @use 'body/src/scss/component' as body;
 
