--- a/packages/storybook-html/src/components/grid-menu/grid-menu.html
+++ b/packages/storybook-html/src/components/grid-menu/grid-menu.html
@@ -1,8 +1,8 @@
 <ul class="uq-grid-menu">
-  <li><a href="#"><span class="uq-grid-menu__title">Menu link 1</span></a></li>
-  <li><a href="#"><span class="uq-grid-menu__title">Menu link 2</span></a></li>
-  <li><a href="#"><span class="uq-grid-menu__title">Menu link 3</span></a></li>
-  <li><a href="#"><span class="uq-grid-menu__title">Menu link 4</span></a></li>
-  <li><a href="#"><span class="uq-grid-menu__title">Menu link 5</span></a></li>
-  <li><a href="#"><span class="uq-grid-menu__title">Menu link 6</span></a></li>
+  <li class="uq-grid-menu__item"><a href="#" class="uq-grid-menu__link"><span class="uq-grid-menu__title">Menu link 1</span></a></li>
+  <li class="uq-grid-menu__item"><a href="#" class="uq-grid-menu__link"><span class="uq-grid-menu__title">Menu link 2</span></a></li>
+  <li class="uq-grid-menu__item"><a href="#" class="uq-grid-menu__link"><span class="uq-grid-menu__title">Menu link 3</span></a></li>
+  <li class="uq-grid-menu__item"><a href="#" class="uq-grid-menu__link"><span class="uq-grid-menu__title">Menu link 4</span></a></li>
+  <li class="uq-grid-menu__item"><a href="#" class="uq-grid-menu__link"><span class="uq-grid-menu__title">Menu link 5</span></a></li>
+  <li class="uq-grid-menu__item"><a href="#" class="uq-grid-menu__link"><span class="uq-grid-menu__title">Menu link 6</span></a></li>
 </ul>
