--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -673,7 +673,8 @@
 <!-- grid-menu -->
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6">
-    <h2>Grid menu with icons &amp; descriptions</h2>
+    <h2>Grid menu</h2>
+    <h3>with icons &amp; descriptions</h3>
     <ul class="uq-grid-menu">
       <li class="uq-grid-menu__item">
         <a href="#" class="uq-grid-menu__link">
@@ -706,8 +707,56 @@
         <a href="#" class="uq-grid-menu__link">
           <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
           <span class="uq-grid-menu__title">Menu link 4</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales.
+          </span>
+        </a>
+      </li>
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 5</span>
           <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
             luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
+          </span>
+        </a>
+      </li>
+    </ul>
+    <br>
+    
+    <h3>with dark text</h3>
+    <ul class="uq-grid-menu uq-grid-menu--dark-text">
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 1</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+            luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
+          </span>
+        </a>
+      </li>
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 2</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+            luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
+          </span>
+        </a>
+      </li>
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 3</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+            luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
+          </span>
+        </a>
+      </li>
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 4</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales.
           </span>
         </a>
       </li>
@@ -722,15 +771,7 @@
       </li>
     </ul>
     <br/>
-    <h2>Grid menus with equalised height</h2>
-    <ul class="uq-grid-menu uq-grid-menu--equalised">
-      <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Refresh to see me equalise!</span></a></li>
-      <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Menu link 2</span></a></li>
-      <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi interdum eros vitae dignissim luctus. Phasellus et ligula est.</span></a></li>
-      <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Menu link 4</span></a></li>
-      <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Menu link 5</span></a></li>
-      <li class="uq-grid-menu__item"><a class="uq-grid-menu__link" href="#"><span class="uq-grid-menu__title">Menu link 6</span></a></li>
-    </ul>
+    
   </div>
 </div>
 <br/>
