--- a/packages/storybook-html/src/components/hero/hero.html
+++ b/packages/storybook-html/src/components/hero/hero.html
@@ -1,7 +1,7 @@
 <!-- Page header (default) -->
 <div class="hero">  
-  <div class="hero__content uq-grid">
-    <div class="hero__text uq-grid__col uq-grid__col--xl-12">
+  <div class="hero__content">
+    <div class="hero__text">
       <h1>Page title</h1>
     </div>
   </div>
@@ -9,8 +9,8 @@
 <br>
 <!-- Page header (with really long title) -->
 <div class="hero">  
-  <div class="hero__content uq-grid">
-    <div class="hero__text uq-grid__col uq-grid__col--xl-12">
+  <div class="hero__content">
+    <div class="hero__text">
           <h1>Parturient facilisi erat parturient vestibulum laoreet quam condimentum nullam</h1>
     </div>
   </div>
@@ -26,8 +26,8 @@
       <img src="https://picsum.photos/1920/540" />
     </div>
   </div>
-  <div class="hero__content uq-grid">
-    <div class="hero__text uq-grid__col--6 uq-grid__col--xl-6">
+  <div class="hero__content">
+    <div class="hero__text">
       <h1>Start postgraduate study online</h1>
       <p class="hero__subtext">Apply by June 30</p>
       <p><a class="uq-button" href="#">Learn more</a></p>
