added static images for examples, updated story

--- a/packages/storybook-html/src/components/hero/hero.html
+++ b/packages/storybook-html/src/components/hero/hero.html
@@ -20,10 +20,10 @@
 <div class="hero hero--feature-image">  
   <div class="hero__image">
     <div class="hero__image--small">
-      <img src="https://picsum.photos/375/250" />
+      <img src="/images/hero/hero_example--small.jpg" />
     </div>
     <div class="hero__image--large">
-      <img src="https://picsum.photos/1920/540" />
+      <img src="/images/hero/hero_example--large.jpg" />
     </div>
   </div>
   <div class="hero__content">
