--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -235,6 +235,23 @@
   </div>
   <a href="javascript:void(0)" class="alert__close">&times;</a>
 </div>
+<div class="hero hero--feature-image">  
+  <div class="hero__image">
+    <div class="hero__image--small">
+      <img src="/images/hero/hero_example--small.jpg" />
+    </div>
+    <div class="hero__image--large">
+      <img src="/images/hero/hero_example--large.jpg" />
+    </div>
+  </div>
+  <div class="hero__content">
+    <div class="hero__text">
+      <h1>Hero banner with feature image</h1>
+      <p class="hero__subtext">Banner sub text</p>
+      <p><a class="uq-button" href="#">Call to action</a></p>
+    </div>
+  </div>
+</div>
 
 <!-- breadcrumb -->
 <br/>
